Update README, RULES, and test scenarios; migrate Gradle configurations to use 'configureEach' for improved dependency management